--- a/src/component/login/modal.less
+++ b/src/component/login/modal.less
@@ -25,9 +25,11 @@
     height: 66px;
     border-radius: 33px;
     font-size: 30px;
+    line-height: 30px;
     margin-bottom: 39px;
     background-color: #999999;
     color: #fff;
+    .flex(center, center, row);
   }
 
   &-blue {
