--- a/src/pages/address/index.less
+++ b/src/pages/address/index.less
@@ -27,7 +27,7 @@
       border-radius:40px;
     }
     &-confirm {
-      width:407px;
+      width:417px;
       height:80px;
       background:rgba(42,134,252,1);
       border-radius:40px;
@@ -36,6 +36,9 @@
 
   &-list {
     border-bottom: 20px solid rgba(245,245,245,1);
+    &-title {
+      margin: 34px 0 -10px 31px;
+    }
   }
 
   &-current {
