--- a/src/pages/style/product.less
+++ b/src/pages/style/product.less
@@ -732,10 +732,32 @@
         color: rgba(179, 179, 179, 1);
       }
 
-      &-pirce {
-        font-size: 24px;
+      &-price {
+        font-size: 30px;
+        // font-weight: bold;
+        color: #333333;
+      }
+
+      &-big {
+        font-size: 30px;
+      }
+    }
+
+    &-tran {
+      font-size: 25px;
+      color: #333333;
+
+      &-price {
+        font-size: 40px;
         font-weight: bold;
-        color: rgba(51, 51, 51, 1);
+      }
+
+      &-big {
+        font-size: 40px;
+      }
+
+      &-margin {
+        .margin(26px, l)
       }
     }
 
