--- a/src/pages/index/component/index.less
+++ b/src/pages/index/component/index.less
@@ -15,10 +15,10 @@
     flex-direction: column;
     &-icon {
       .margin(10px, l);
-      width:10px;
-      height:5px;
+      width:20px;
+      height:10px;
       .bg;
-      background-image: url(//net.huanmusic.com/scanbar-c/block.png);
+      background-image: url(//net.huanmusic.com/scanbar-c/v1/block.png);
     }
     &-title {
       .flex(center, flex-start, row);
@@ -51,6 +51,7 @@
         font-size: 22px;
         font-weight:500;
         color:rgba(255,255,255,1);
+        line-height: 22px;
       }
     }
     &-search {
