--- a/src/pages/order/index.less
+++ b/src/pages/order/index.less
@@ -33,7 +33,7 @@
 
   &-detail {
     &-bg {
-      height: 369px - 144px + 10px;
+      height: 235px;
       width: 100%;
       .background-image('//net.huanmusic.com/weapp/bg_order.png');
     }
@@ -48,11 +48,11 @@
 
     &-price {
       color: #333333;
-      font-size: 24px;
-      font-weight: bold;
+      font-size: 30px;
+      // font-weight: bold;
 
       &-integer {
-        font-size: 34px;
+        font-size: 30px;
       }
     }
 
@@ -239,12 +239,19 @@
       height:350px;
       .padding(30px);
       background:rgba(247,247,247,1);
-      border:1px solid rgba(153,153,153,1);
+      border:1px solid #cccccc;
       border-radius:10px;
       position: relative;
       &-text {
         width: 100%;
-        height: 100%;
+        // height: 100%;
+        height: 270px;
+      }
+      &-corner {
+        display: flex;
+        justify-content: flex-end;
+        font-size: 24px;
+        color: #999999;
       }
     }
     &-title {
@@ -262,11 +269,11 @@
       .padding(36px, lr);
       height: 60px;
       .flex(center, center, row);
-      border:1px solid rgba(153,153,153,1);
+      border:1px solid #cccccc;
       border-radius:20px;
       font-size:28px;
       font-weight:500;
-      color:rgba(128,128,128,1);
+      color:#808080;
       line-height: 60px;
       .margin(20px, b);
       .margin(16px, r);
