--- a/src/pages/style/order.less
+++ b/src/pages/style/order.less
@@ -15,19 +15,21 @@
     top: 0;
     left: 0;
     right: 0;
-    height: 230px;
+    height: 235px;
     width: 100%;
-    .bg;
-    background-image: url(//net.huanmusic.com/scanbar-c/bg_order.png);
+    .background-image('//net.huanmusic.com/weapp/bg_order.png');
   }
   &-box {
     position: relative;
     z-index: 100;
   }
   &-remark {
-    width: 690px;
-    .margin(30px, l);
-    .margin(20px, t);
+    width: 100%;
+    .flex(center, center, row);
+    background: #F2F2F2;
+    &-card {
+      width: 690px;
+    }
   }
   &-search {
     width: 610px !important;
@@ -178,4 +180,44 @@
       width: 690px;
     }
   }
+
+  &-modal {
+    display: flex;
+    background-color: #f6f6f6;
+    height: 600px;
+    border-top: 1px solid #f9f9f9;
+
+    &-list {
+      display: flex;
+      flex-direction: column;
+      width: 100%;
+      height: 100%;
+      background-color: #fff;
+
+      &-item {
+        height: 94px;
+        width: 100%;
+        display: flex;
+        align-items: center;
+        border-bottom: 1px solid #f9f9f9;
+        font-size: 26px;
+        font-size: #333333;
+        padding: 0 30px;
+      }
+
+      &-select {
+        font-size: #333333;
+        color: #2A86FC;
+      }
+    }
+
+    &-menu {
+      width: 220px;
+    }
+  }
+}
+
+.layout-header__title {
+  text-align: center !important;
+  padding-right: 0px !important;
 }
