--- a/src/styles/theme.less
+++ b/src/styles/theme.less
@@ -1,8 +1,8 @@
 /**
  * @Author: Ghan 
  * @Date: 2019-10-30 11:33:11 
- * @Last Modified by: Ghan
- * @Last Modified time: 2020-01-09 16:21:08
+ * @Last Modified by: centerm.gaozhiying
+ * @Last Modified time: 2020-03-01 17:43:00
  */
 
 // 主色调
@@ -68,10 +68,11 @@
   .padding(10px, lr);
   .flex(center, center);
   height:30px;
-  border:1px solid @color;
+  // border:1px solid @color;
   border-radius:10px;
   color: @color;
   font-size:24px;
+  line-height: 24px;
 }
 
 .act-item-bg (@color, @bgcolor) {
