整理代码，删除无用代码

--- a/src/pages/style/product.less
+++ b/src/pages/style/product.less
@@ -655,6 +655,40 @@
       }
     }
 
+    &-header {
+      width: 100%;
+      height: 92px;
+      .flex(center, space-between, row);
+      border-bottom: #E3E3E3 1px solid;
+      padding: 0 32px;
+      
+      &-item {
+        .flex(center, center, row);
+      }
+
+      &-shop {
+        color: #333333;
+        font-size: 30px;
+      }
+
+      &-green {
+        color: #2CA43A;
+        font-size: 26px;
+      }
+
+      &-next {
+        width: 13px;
+        height: 24px;
+        margin-left: 17px;
+      }
+
+      &-phone {
+        width: 30px;
+        height: 30px;
+        margin-right: 13px;
+      }
+    }
+
     &-totals {
       display: flex;
       flex-direction: column;
