第二版加入退货模块等

--- a/src/component/product/product.less
+++ b/src/component/product/product.less
@@ -262,8 +262,17 @@
       background: rgba(204, 204, 204, 1);
       border-radius: 25px;
       font-size: 30px;
+      line-height: 30px;
       font-weight: 500;
       color: rgba(255, 255, 255, 1);
+    }
+
+    &-delete {
+      background-color: transparent;
+      border: #2A86FC solid 2px;
+      color: #2A86FC;
+      margin-right: 30px;
+      font-weight: normal;
     }
 
     &-purchase {
