--- a/src/component/order/order.less
+++ b/src/component/order/order.less
@@ -7,6 +7,10 @@
   width: 100%;
   height: 100%;
 
+  &-row {
+    .flex(center, center, row);
+  }
+
   &-card {
     position: relative;
     width: 690px;
