--- a/src/pages/index/component/index.less
+++ b/src/pages/index/component/index.less
@@ -10,7 +10,9 @@
     .padding(30px, lr);
     .padding(3px, t);
     position: relative;
-    background-color: @theme-color;
+    .bg;
+    background-image: url(//net.huanmusic.com/scanbar-c/v2/bg_home_shang.png);
+    
     display: flex;
     flex-direction: column;
     &-icon {
@@ -52,6 +54,7 @@
         font-weight:500;
         color:rgba(255,255,255,1);
         line-height: 22px;
+        text-align: center;
       }
     }
     &-search {
@@ -74,5 +77,80 @@
         color:rgba(255,255,255,1);
       }
     }
+  }
+
+  &-discount {
+    width: 100%;
+    height: 122px;
+    .bg;
+    background-image: url(//net.huanmusic.com/scanbar-c/v2/bg_home_zhong.png);
+    .flex(flex-start, space-around, row);
+
+    &-item {
+      position: relative;
+      // width: ;
+      height: 88px;
+      .flex(center, space-between, column);
+      color: #fff;
+      font-size: 24px;
+
+      &-data {
+        font-size: 36px;
+        font-weight: bold;
+      }
+
+      &-integral {
+        width: 43px;
+        height: 43px;
+        // margin-bottom: 19px;
+      }
+
+      &-coupon {
+        width: 47px;
+        height: 42px;
+      }
+    }
+
+    &-pop {
+      position: absolute;
+      top: 0;
+      right: -106px;
+      width: 96px;
+      height: 28px;
+      .bg;
+      background-image: url(//net.huanmusic.com/scanbar-c/v2/bg_coupon_prompt.png);
+      color: #FF893B;
+      font-size: 20px;
+      .flex(center, center);
+    }
+  }
+
+  &-banner {
+    width: 100%;
+    height: 245px;
+    position: relative;
+    .flex(flex-start, center);
+
+    &-bg {
+      position: absolute;
+      top: 0;
+      width: 100%;
+      height: 150px;
+      .bg;
+      background-image: url(//net.huanmusic.com/scanbar-c/v2/bg_home_xia.png);
+    }
+
+    &-swiper {
+      width: 710px;
+      height: 220px;
+
+      &-item {
+        border-radius: 10px;
+        width: 100%;
+        height: 100%;
+        .bg;
+      }
+    }
+    
   }
 }
