--- a/src/pages/order/component/index.less
+++ b/src/pages/order/component/index.less
@@ -6,12 +6,14 @@
 
   &-address {
     .padding(30px, t);
+
     &-pad {
       position: relative;
       z-index: 100;
       width: 690px;
       .margin(30px, l)
     }
+
     &-tabs {
       position: relative;
       display: flex;
@@ -19,6 +21,7 @@
       align-items: flex-end;
       border-radius: 10px 10px 0 0;
       overflow: hidden;
+
       &-bg {
         border-radius: 10px;
         position: absolute;
@@ -26,36 +29,42 @@
         left: 0;
         right: 0;
         height: 66px;
-        background:rgba(225,238,255,1);
+        background: rgba(225, 238, 255, 1);
       }
     }
+
     &-tab {
       .bg;
       display: flex;
       flex: 1;
       .flex(center, center);
       position: relative;
+
       &-active {
         height: 74px;
-        font-size:30px;
-        font-weight:500;
-        color:rgba(42,134,252,1);
+        font-size: 30px;
+        font-weight: 500;
+        color: rgba(42, 134, 252, 1);
+
         &-left {
           background-image: url(//net.huanmusic.com/scanbar-c/tab_left.png);
         }
+
         &-right {
           background-image: url(//net.huanmusic.com/scanbar-c/tab_right.png);
         }
       }
+
       &-disable {
-        font-size:26px;
-        font-weight:500;
-        color:rgba(153,153,153,1);
+        font-size: 26px;
+        font-weight: 500;
+        color: rgba(153, 153, 153, 1);
         height: 66px;
-        background:rgba(225,238,255,1);
+        background: rgba(225, 238, 255, 1);
         border-radius: 10px 10px 0 0;
       }
     }
+
     &-detail {
       display: flex;
       flex-direction: column;
@@ -67,6 +76,7 @@
         height: 200px;
         .flex(center, center);
         position: relative;
+
         &::after {
           .border1px;
         }
@@ -74,19 +84,21 @@
 
       &-button {
         .flex(center, center);
-        width:282px;
-        height:82px;
-        border:2px solid rgba(42,134,252,1);
-        border-radius:40px;
+        width: 282px;
+        height: 82px;
+        border: 2px solid rgba(42, 134, 252, 1);
+        border-radius: 40px;
+
         &-icon {
           width: 22px;
           height: 22px;
           .margin(16px, r);
         }
+
         &-text {
-          font-size:30px;
-          font-weight:500;
-          color:rgba(42,134,252,1);
+          font-size: 30px;
+          font-weight: 500;
+          color: rgba(42, 134, 252, 1);
         }
       }
 
@@ -96,29 +108,160 @@
         .padding(30px, lr);
         .flex(center, space-between, row);
         position: relative;
+
         &-title {
-          font-size:30px;
-          font-weight:500;
-          color:rgba(51,51,51,1);
+          font-size: 30px;
+          font-weight: 500;
+          color: rgba(51, 51, 51, 1);
+
           &-right {
             .margin(13px + 16px, r);
           }
         }
+
         &-border {
           &::after {
             .border1px;
           }
         }
+
         &-main {
-          color: @theme-color !important;
+          color: @theme-color  !important;
         }
+
         &-arrow {
           position: absolute;
           top: 50%;
           right: 30px;
           transform: translateY(-50%);
-          width:13px;
-          height:24px;
+          width: 13px;
+          height: 24px;
+        }
+      }
+    }
+  }
+
+  &-product {
+    width: 100%;
+    position: relative;
+    display: flex;
+    flex-direction: row;
+    padding: 30px 26px;
+
+    &-border {
+      border-bottom: #E3E3E3 solid 1px;
+    }
+
+    &-image {
+      width: 150px;
+      height: 150px;
+      border-radius: 10px;
+      border: #E3E3E3 solid 1px;
+    }
+
+    &-detail {
+      .flex(flex-start, space-between, column);
+      margin-left: 14px;
+
+      &-title {
+        font-size: 30px;
+        color: #525252;
+        display: -webkit-box;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        line-clamp: 2;
+        -webkit-line-clamp: 2;
+        -webkit-box-orient: vertical;
+        line-height: 1.2;
+      }
+
+      &-price {
+        .flex(flex-end, flex-end, row);
+        height: 30px;
+        color: #FC4E44;
+        font-weight: bold;
+        font-size: 24px;
+        line-height: 24px;
+
+        &-integer {
+          font-size: 30px;
+          line-height: 30x;
+        }
+      }
+
+      &-tip {
+        color: #999999;
+        font-size: 24px;
+        margin-top: 15px;
+      }
+    }
+
+    &-stepper {
+      position: absolute;
+      right: 15px;
+      bottom: 0;
+
+      &-empty {
+        .flex(center, center);
+        width: 107px;
+        height: 50px;
+        background: rgba(204, 204, 204, 1);
+        border-radius: 25px;
+        font-size: 30px;
+        line-height: 30px;
+        font-weight: 500;
+        color: rgba(255, 255, 255, 1);
+      }
+
+      &-delete {
+        background-color: transparent;
+        border: #2A86FC solid 2px;
+        color: #2A86FC;
+        margin-right: 30px;
+        font-weight: normal;
+      }
+
+      &-purchase {
+        bottom: 20px;
+        font-size: 36px;
+        font-weight: bold;
+        color: @theme-color;
+      }
+
+      &-edit {
+        width: 32px;
+        height: 29px;
+        .margin(11px, l);
+      }
+
+      &-container {
+        .flex(center, center, row);
+        // .margin(14px, b);
+      }
+
+      &-text {
+        min-width: 60px;
+        .flex(center, center);
+        font-size: 30px;
+        color: #666666;
+      }
+
+      &-touch {
+        width: 80px;
+        height: 80px;
+        .flex(center, center);
+      }
+
+      &-button {
+        width: 50px;
+        height: 50px;
+
+        &-reduce {
+          .background-image('//net.huanmusic.com/scanbar-c/bt_shanchu_l.png');
+        }
+
+        &-add {
+          .background-image('//net.huanmusic.com/scanbar-c/bt_increase_l.png');
         }
       }
     }
