--- a/src/pages/style/product.less
+++ b/src/pages/style/product.less
@@ -8,7 +8,7 @@
 @product-header-height: 20px + 20px + 60px;
 @product-header-zindex: 100;
 @product-list-left-bg-color: #f6f6f6;
-@product-list-type-height: 94px;
+@product-list-type-height: 100px;
 @product-list-type-header-font: 28px;
 @product-section-color: #F8F8FA;
 @product-select-title-font: 32px;
@@ -18,6 +18,7 @@
   display: flex;
   flex-direction: column;
   position: relative;
+  overflow: hidden;
 
   &-header {
     z-index: @product-header-zindex;
@@ -101,6 +102,10 @@
     }
   }
 
+  &-activity {
+    width: 100%;
+  }
+
   &-list {
     &-container {
       position: absolute;
@@ -119,12 +124,12 @@
       }
 
       &-costom {
-        position: absolute;
-        top: 140px;
-        bottom: 0;
         width: 100%;
+        height: 100%;
         display: flex;
         flex-direction: row;
+        border-top: rgba(193, 192, 201, .3) solid 1px;
+        overflow: scroll;
       }
     }
 
@@ -167,11 +172,12 @@
       display: flex;
       flex-direction: column;
       flex: 1;
+      overflow: scroll;
 
       &-container {
+        margin-top: 94px;
         position: absolute;
-        top: 70px;
-        bottom: 0px;
+        height: calc(100%);
 
         &-search {
           position: absolute;
@@ -190,6 +196,10 @@
         display: flex;
         flex-direction: row;
         align-items: center;
+        position: fixed;
+        background-color: #fff;
+        width: 100%;
+        z-index: 1;
 
         &-bge {
           background-color: @theme-color;
@@ -202,6 +212,22 @@
           font-size: @product-list-type-header-font;
           color: @base-font-color;
           font-weight: bold;
+        }
+      }
+
+      &-types {
+        // z-index: 1;
+        position: absolute;
+        top: 0;
+        bottom: 0;
+        left: 0;
+        right: 0;
+
+        &-secondary {
+          // z-index: 1;
+          position: relative;
+          width: 100%;
+          height: 100%;
         }
       }
     }
@@ -661,7 +687,7 @@
       .flex(center, space-between, row);
       border-bottom: #E3E3E3 1px solid;
       padding: 0 32px;
-      
+
       &-item {
         .flex(center, center, row);
       }
