第二版完善优惠券模块

--- a/src/pages/order/component/index.less
+++ b/src/pages/order/component/index.less
@@ -162,6 +162,7 @@
     &-detail {
       .flex(flex-start, space-between, column);
       margin-left: 14px;
+      width: 550px;
 
       &-title {
         font-size: 30px;
