--- a/src/component/coupon/index.less
+++ b/src/component/coupon/index.less
@@ -68,6 +68,7 @@
 
   &-item {
     margin-top: 13px;
+
     &-text-grey {
       color: #CCCCCC !important;
     }
@@ -86,7 +87,7 @@
       background-image: url(//net.huanmusic.com/scanbar-c/v2/bg_coupon.png);
 
       &-grey {
-        background-image: url(//net.huanmusic.com/scanbar-c/v2/bg_coupon_grey.png);
+        background-image: url(//net.huanmusic.com/scanbar-c/v2/bg_coupon_grey_expand.png);
       }
 
       &-left {
@@ -155,6 +156,160 @@
         text-align: center;
         border: #FF893B solid 2px;
         border-radius: 20px;
+      }
+    }
+  }
+}
+
+.coupon {
+  &-item {
+    margin-top: 20px;
+
+    &-text-grey {
+      color: #CCCCCC !important;
+    }
+
+    &-border-grey {
+      border-color: #CCCCCC !important;
+    }
+
+    &-top {
+      position: relative;
+      .flex(center, center, row);
+      width: 690px;
+      height: 181px;
+      z-index: 2;
+      .bg;
+      background-image: url(//net.huanmusic.com/scanbar-c/v2/bg_coupon.png);
+
+      &-grey {
+        background-image: url(//net.huanmusic.com/scanbar-c/v2/bg_coupon_grey_expand.png);
+      }
+
+      &-left {
+        .flex(center, center, column);
+        width: 212px;
+        height: 100%;
+        color: #fff;
+
+        &-price {
+          font-size: 80px;
+          line-height: 80px;
+          font-weight: bold;
+          position: relative;
+        }
+
+        &-sign {
+          font-size: 24px;
+          line-height: 24px;
+          font-weight: bold;
+          position: absolute;
+          right: -15px;
+          top: 10px;
+        }
+
+        &-info {
+          font-size: 26px;
+          line-height: 26px;
+          margin-top: 25px;
+        }
+      }
+
+      &-right {
+        .flex(flex-start, center, column);
+        width: 478px;
+        height: 100%;
+        margin-left: 58px;
+
+        &-row {
+          .flex(center, center, row);
+          margin-top: 30px;
+        }
+
+        &-info {
+          font-size: 30px;
+          line-height: 30px;
+          color: #333333;
+          font-weight: bold;
+        }
+
+        &-time {
+          font-size: 22px;
+          line-height: 22px;
+          color: #666666;
+        }
+
+        &-pop {
+          width: 50px;
+          height: 50px;
+          .flex(center, center);
+
+          &-img {
+            width: 18px;
+            height: 10px;
+            // margin-left: 25px;
+            transform: rotate(180deg);
+
+            &-down {
+              transform: rotate(0deg);
+            }
+          }
+
+        }
+      }
+
+      &-button {
+        position: absolute;
+        right: 30px;
+        top: 65px;
+        .flex(center, center);
+        width: 132px;
+        height: 50px;
+        color: #FF893B;
+        font-size: 28px;
+        text-align: center;
+        border: #FF893B solid 2px;
+        border-radius: 25px;
+
+        &-grey {
+          background-color: #CCCCCC;
+          color: #FFFFFF;
+          border: none;
+        }
+      }
+
+      &-radio {
+        position: absolute;
+        right: 40px;
+        top: 73px;
+        width: 36px;
+        height: 36px;
+      }
+    }
+
+    &-bottom {
+      z-index: 1;
+      width: 690px;
+      padding: 46px 27px 33px 27px;
+      margin-top: -19px;
+      border-radius: 10px;
+      .flex(flex-start, center, column);
+      background-color: #fff;
+
+      &-prompt {
+        .flex(center, center, row);
+
+        &-icon {
+          width: 22px;
+          height: 22px;
+          margin-right: 8px;
+        }
+      }
+
+      &-info {
+        font-size: 22px;
+        line-height: 35px;
+        color: #666666;
       }
     }
   }
