--- a/src/pages/order/index.less
+++ b/src/pages/order/index.less
@@ -215,12 +215,22 @@
             font-size: 30px;
           }
 
+          &-box {
+            .flex(center, center, row);
+          }
+
           &-content {
             color: #333333;
             font-size: 28px;
             width: 388px;
             display: flex;
             justify-content: flex-end;
+          }
+
+          &-copy {
+            width: 22px;
+            height: 23px;
+            .margin(11px, l);
           }
         }
       }
@@ -393,16 +403,18 @@
       width: 100%;
       border-top: #E3E3E3 solid 1px;
       margin-top: 30px;
+      padding-bottom: 200px;
     }
 
     &-footer {
-      position: absolute;
+      position: fixed;
       bottom: 0px;
       width: 100%;
       height: 160px;
       .flex(center, space-between);
       border-top: #E3E3E3 solid 1px;
       padding: 0px 30px;
+      background-color: #fff;
 
       &-button {
         width: 670px;
@@ -442,6 +454,12 @@
       &-tabs {
         width: 100%;
         height: 90px;
+        position: fixed;
+        top: 0;
+      }
+
+      &-container {
+        margin-top: 0px !important;
       }
     }
   }
