--- a/src/component/tabs/tabs.choose.less
+++ b/src/component/tabs/tabs.choose.less
@@ -29,7 +29,7 @@
   }
 
   &-container {
-    position: fixed;
+    position: absolute;
     width: 100%;
     height: 100px;
     margin-top: -5rpx;
