* 修改 商品优惠

--- a/src/pages/cart/index.less
+++ b/src/pages/cart/index.less
@@ -1,10 +1,11 @@
 .cart-list-info {
-  height: 200px;
+  display: flex;
+  flex-direction: column;
   &-cont {
     padding-bottom: 200px;
   }
   &:last-child {
-    margin-bottom: 200px;
+    margin-bottom: 20px;
   }
   .component-product-last {
     margin-bottom: 0;
