--- a/src/pages/cart/index.less
+++ b/src/pages/cart/index.less
@@ -1,3 +1,4 @@
+@import "../../styles/theme.less";
 .cart-list-info {
   display: flex;
   flex-direction: column;
@@ -9,5 +10,36 @@
   }
   .component-product-last {
     margin-bottom: 0;
+  }
+}
+
+.cart-component {
+  &-section {
+    .padding(30px, t);
+    .padding(30px, lr);
+    font-size: 26px;
+    color: rgba(51, 51, 51, 1);
+    .flex(center, flex-start, row);
+  }
+  &-sec {
+    border-bottom: 20px solid;
+    border-color: rgba(245, 245, 245, 1);
+  }
+  &-bge {
+    .padding(10px, lr);
+    height: 30px;
+    .flex(center, center);
+    .margin(15px, r);
+    border-radius: 10px;
+    font-size: 20px;
+
+    &-red {
+      color: rgba(252, 78, 68, 1);
+      background: rgba(255, 235, 235, 1);
+    }
+    &-orange {
+      color: rgba(255, 137, 59, 1);
+      background: rgba(255, 240, 226, 1);
+    }
   }
 }
