修改h5页面样式不兼容问题

--- a/src/component/order/order.less
+++ b/src/component/order/order.less
@@ -110,6 +110,22 @@
           -webkit-box-orient: vertical;
           text-align: center;
           margin-top: 10px;
+          &-h5 {
+            color: #333333;
+            font-size: 18px;
+            width: 147px;
+            display: block;
+            overflow: hidden;
+            text-overflow: ellipsis;
+            line-clamp: 1;
+            -webkit-line-clamp: 1;
+            -webkit-box-orient: vertical;
+            text-align: center;
+            margin-top: 10px;
+            white-space: nowrap;
+            overflow: hidden;
+            text-overflow: ellipsis;
+          }
         }
       }
 
