--- a/src/pages/order/index.less
+++ b/src/pages/order/index.less
@@ -30,7 +30,23 @@
       justify-content: center;
     }
   }
+  &-scrollview-h5 {
+    background-color: #F2F2F2;
+    height: calc(100% - 90px);
 
+    &-bottom {
+      width: 100%;
+      .padding(50px, tb);
+      .flex(center, center, row);
+      font-size: 26px;
+      color: #999999;
+    }
+
+    &-item {
+      display: flex;
+      justify-content: center;
+    }
+  }
   &-detail {
     &-bg {
       height: 235px;
