--- a/src/pages/user/index.less
+++ b/src/pages/user/index.less
@@ -296,6 +296,7 @@
       left: calc(~'100% + 10px');
       top: 2px;
       height: 32px;
+      width: 94px;
       display: flex;
       flex-direction: row;
       align-items: center;
