--- a/src/styles/theme.less
+++ b/src/styles/theme.less
@@ -7,6 +7,7 @@
 
 // 主色调
 @theme-color: #2a86fc;
+@theme-false-color: #CCCCCC;
 // placeholer-text-color: placeholer颜色
 @placeholer-text-color: #cccccc;
 // base-font-color: 字体颜色
