--- a/src/pages/style/product.less
+++ b/src/pages/style/product.less
@@ -166,18 +166,22 @@
         }
       }
     }
-
+    &-h5-height {
+      height: calc(90%);
+    }
     &-right {
       position: relative;
       display: flex;
       flex-direction: column;
       flex: 1;
       overflow: hidden;
+      overflow-y: auto;
 
       &-container {
         margin-top: 94px;
         position: absolute;
         height: calc(100%);
+        width: 100%;
 
         &-search {
           position: absolute;
@@ -775,6 +779,21 @@
       -webkit-box-orient: vertical;
       font-weight: 500;
       color: rgba(51, 51, 51, 1);
+      &-h5 {
+        font-size: 30px;
+        width: 464px;
+        display: block;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        line-clamp: 1;
+        -webkit-line-clamp: 1;
+        -webkit-box-orient: vertical;
+        font-weight: 500;
+        color: rgba(51, 51, 51, 1);
+        overflow: hidden;
+        text-overflow: ellipsis;
+        white-space: nowrap;
+      }
     }
 
     &-corner {
