修改h5样式，登陆页面，登陆接口，获取地理位置

--- a/src/component/tabs/tabs.choose.less
+++ b/src/component/tabs/tabs.choose.less
@@ -45,7 +45,7 @@
 
     &-list {
       white-space: nowrap;
-      width: 500px;
+      width: 100%;
       .flex(center, flex-start, row);
 
       &-container {
