--- a/src/pages/order/component/index.less
+++ b/src/pages/order/component/index.less
@@ -10,8 +10,8 @@
     &-pad {
       position: relative;
       z-index: 100;
-      width: 690px;
-      .margin(30px, l)
+      width: 90%;
+      margin: auto;
     }
 
     &-tabs {
