--- a/src/pages/order/index.less
+++ b/src/pages/order/index.less
@@ -59,7 +59,11 @@
       .padding(30px, lr);
       height: 100%;
       width: 100%;
+      margin: auto;
       margin-top: 124px - 369px;
+      width: 90%;
+      padding: 0;
+    
     }
 
     &-price {
@@ -74,7 +78,7 @@
 
     &-card {
       border-radius: 10px;
-      width: 690px;
+      width: 100%;
       background-color: #fff;
       display: flex;
       flex-direction: column;
@@ -256,7 +260,6 @@
   &-remark {
     background-color: #fff;
     .padding(30px);
-
     &-input {
       width: 690px;
       height: 350px;
