--- a/src/pages/style/order.less
+++ b/src/pages/style/order.less
@@ -28,7 +28,7 @@
     .flex(center, center, row);
     background: #F2F2F2;
     &-card {
-      width: 690px;
+      width: 90%;
     }
   }
   &-search {
