--- a/src/component/address/index.less
+++ b/src/component/address/index.less
@@ -158,11 +158,11 @@
       display: flex;
       flex-direction: row;
       &-bottom {
-        z-index: 100;
+        z-index: 9;
         position: absolute;
         bottom: -50px - 30px - 46px;
         right: 0;
-        width: 585px;
+        width: 100%;
         .padding(25px, tb);
         .margin(34px, t);
         &::after {
