--- a/src/component/order/order.less
+++ b/src/component/order/order.less
@@ -13,7 +13,7 @@
 
   &-card {
     position: relative;
-    width: 690px;
+    width: 90%;
     height: 448px;
     background-color: #fff;
     margin-top: 30px;
