--- a/src/pages/product/index.less
+++ b/src/pages/product/index.less
@@ -7,9 +7,8 @@
   &-header {
     width: 750px;
     height: 120px;
-    background-color: @theme-color;
     .flex(center, center, row);
-
+    z-index: 99;
     &-container {
       position: absolute !important;
       top: 0;
