--- a/src/pages/style/member.less
+++ b/src/pages/style/member.less
@@ -266,7 +266,7 @@
       }
       &-search {
         z-index: @member-search-zindex + 100;
-        width: 550px;
+        width: 78%;
         height: 60px;
         border-radius: 30px;
         background-color: #ffffff;
