--- a/src/styles/theme.less
+++ b/src/styles/theme.less
@@ -26,7 +26,9 @@
 @small-text-color: @base-font-color;
 // primary-button-size: 按钮大小 
 @primary-button-size: 80px;
-
+.taro_chooselocation {
+  z-index: 999;
+}
 .title-text (@color: @title-text-color) {
   font-size: @title-text-fontsize;
   color: @color;
