修改地址样式

--- a/src/pages/address/index.less
+++ b/src/pages/address/index.less
@@ -10,7 +10,7 @@
   }
 
   &-buttons {
-    display: flex;
+    display: -webkit-box;
     flex-direction: row;
     &-button {
       .margin(30px, t);
@@ -21,13 +21,13 @@
       color:rgba(255,255,255,1);
     }
     &-delete {
-      width:240px;
+      width:30%;
       height:80px;
       background:rgba(153,153,153,1);
       border-radius:40px;
     }
     &-confirm {
-      width:417px;
+      width:60%;
       height:80px;
       background:rgba(42,134,252,1);
       border-radius:40px;
