修改地址样式,修改支付，修改购物车样式，修改订单样式

--- a/src/component/card/form.card.less
+++ b/src/component/card/form.card.less
@@ -4,8 +4,12 @@
 @form-input-width: 300px;
 
 .@{form-prefix} {
-  .margin(14px, t);
   .theme-card;
+  &-wrap {
+    width: 90%;
+    margin: 0 auto;
+    margin-top: 22px;
+  }
   &-buttons {
     .flex(center, center);
   }
