--- a/src/component/coupon/index.less
+++ b/src/component/coupon/index.less
@@ -3,6 +3,7 @@
 @coupon-modal: coupon-modal;
 
 .@{coupon-modal} {
+  z-index: 9999;
   position: absolute;
   width: 100%;
   height: 100%;
@@ -10,7 +11,6 @@
   bottom: 0;
   left: 0;
   right: 0;
-  z-index: 99;
   .flex(center, center, column);
   background-color: rgba(0, 0, 0, .6);
 
@@ -52,6 +52,7 @@
     // bottom: 36px;
     // left: 30px;
     border-radius: 84px;
+    border: none;
   }
 
   &-close {
@@ -164,7 +165,7 @@
 .coupon {
   &-item {
     margin-top: 20px;
-
+    width: 90%;
     &-text-grey {
       color: #CCCCCC !important;
     }
@@ -176,14 +177,18 @@
     &-top {
       position: relative;
       .flex(center, center, row);
-      width: 690px;
+      width: 100%;
+      margin: auto;
       height: 181px;
       z-index: 2;
       .bg;
       background-image: url(//net.huanmusic.com/scanbar-c/v2/bg_coupon.png);
-
+      border-radius: 10px;
+      background-size: 100%;
       &-grey {
         background-image: url(//net.huanmusic.com/scanbar-c/v2/bg_coupon_grey_expand.png);
+        background-size: 100%;
+        border-radius: 10px;
       }
 
       &-left {
@@ -289,7 +294,8 @@
 
     &-bottom {
       z-index: 1;
-      width: 690px;
+      width: 100%;
+      margin: auto;
       padding: 46px 27px 33px 27px;
       margin-top: -19px;
       border-radius: 10px;
