--- a/src/styles/reset.less
+++ b/src/styles/reset.less
@@ -30,7 +30,13 @@
  button {
    outline: none;
  }
- 
+ .layout-header__title {
+   font-size: 32px !important;
+ }
+ .at-float-layout .layout-header__btn-close::before, .at-float-layout .layout-header__btn-close::after{
+  width: 36px !important;
+  height: 2PX !important;
+ }
  .taro-text {
    box-sizing: border-box;
  }
