--- a/src/styles/theme.less
+++ b/src/styles/theme.less
@@ -95,12 +95,15 @@
   right: 0;
   bottom: 0;
   transform: scaleY(0.5);
-  border-bottom: 1px solid #e3e3e3;
+  border-bottom: 3px solid #e3e3e3;
 }
 
 .container {
   width: 100%;
-  height: 100%;
+  height: 100%; 
+  &-colorB {
+    background: #fff;
+  }
   &-color {
     background-color: #f2f2f2;
   }
