--- a/src/component/order/order.less
+++ b/src/component/order/order.less
@@ -16,6 +16,7 @@
     width: 90%;
     height: 448px;
     background-color: #fff;
+    margin: auto;
     margin-top: 30px;
     border-radius: 10px;
     padding-top: 34px;
@@ -156,7 +157,7 @@
         height: 52px;
         .flex(center, center, column);
         font-size: 26px;
-        line-height: 26px;
+        line-height: 52px;
         border-radius: 22.5px;
         margin-top: 24px;
         margin-right: 30px;
