--- a/src/pages/order/index.less
+++ b/src/pages/order/index.less
@@ -25,10 +25,10 @@
       color: #999999;
     }
 
-    &-item {
-      display: flex;
-      justify-content: center;
-    }
+    // &-item {
+    //   // display: flex;
+    //   // justify-content: center;
+    // }
   }
   &-scrollview-h5 {
     background-color: #F2F2F2;
@@ -61,7 +61,7 @@
       width: 100%;
       margin: auto;
       margin-top: 124px - 369px;
-      width: 90%;
+      width: 100%;
       padding: 0;
     
     }
@@ -78,12 +78,12 @@
 
     &-card {
       border-radius: 10px;
-      width: 100%;
+      width: 90%;
       background-color: #fff;
       display: flex;
       flex-direction: column;
+      margin: 0 auto;
       margin-top: 22px;
-
       &-status {
         height: 256px;
         padding-left: 32px;
@@ -257,22 +257,25 @@
     }
   }
 
-  &-remark {
+  &-remark-pay {
     background-color: #fff;
-    .padding(30px);
+    padding-top: 22px;
+    height: 100%;
     &-input {
-      width: 690px;
+      width: 90%;
       height: 350px;
       .padding(30px);
       background: rgba(247, 247, 247, 1);
       border: 1px solid #cccccc;
       border-radius: 10px;
       position: relative;
-
+      margin: auto;
       &-text {
         width: 100%;
         // height: 100%;
-        height: 270px;
+        height: 250px;
+        background: #f7f7f7;
+        border: none;
       }
 
       &-corner {
@@ -284,6 +287,8 @@
     }
 
     &-title {
+      width: 90%;
+      margin: auto;
       font-size: 28px;
       font-weight: 500;
       color: rgba(153, 153, 153, 1);
@@ -294,13 +299,15 @@
       display: flex;
       flex-direction: row;
       flex-wrap: wrap;
+      width: 90%;
+      margin: auto;
     }
 
     &-button {
       .padding(36px, lr);
       height: 60px;
       .flex(center, center, row);
-      border: 1px solid #cccccc;
+      border: 3px solid #cccccc;
       border-radius: 20px;
       font-size: 28px;
       font-weight: 500;
@@ -354,8 +361,8 @@
     }
 
     &-input {
-      width: 690px;
-      height: 200px;
+      width: 90%;
+      height: 220px;
       border: #CCCCCC solid 1px;
       background-color: #F7F7F7;
       border-radius: 10px;
@@ -367,6 +374,8 @@
       &-text {
         width: 100%;
         height: 130px;
+        background-color: #F7F7F7;
+        border: none;
       }
 
       &-corner {
@@ -376,7 +385,6 @@
         color: #999999;
       }
     }
-
     &-modal {
       display: flex;
       background-color: #f6f6f6;
@@ -392,7 +400,7 @@
 
         &-item {
           width: 100%;
-          height: 94px;
+          height: 100px;
           padding: 32px 30px;
           color: #333333;
           font-size: 30px;
@@ -431,12 +439,12 @@
       width: 100%;
       height: 160px;
       .flex(center, space-between);
-      border-top: #E3E3E3 solid 1px;
+      // border-top: #E3E3E3 solid 1px;
       padding: 0px 30px;
       background-color: #fff;
 
       &-button {
-        width: 670px;
+        width: 90%;
         height: 80px;
 
         &-little {
